# PyElit

./: .gitignore  CHANGELOG.md  CONTRIBUTING-pt_br.md  CONTRIBUTING.md  MANIFEST.in  Main.py  Pipfile  README-pt_br.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: discuss-o.md  feature.md  reporte-o-bug.md
Geoparsing/: Geoparsing.py  __init__.py  preprocessing_gazetteer.py  utils.py
Geoparsing/gazetteer/: features_jp.csv  features_jp_ln.csv  features_jp_pt.csv  features_paraiba_pt.csv
Geoparsing/gazetteer/processados/: cg.csv  cg_ln.csv  cg_pt.csv  gazetteer1.csv  gazetteer_pt.csv  jp.csv  jp_ln.csv  jp_pt.csv  pb_pt.csv
TopicModeling/: TopicModeling.py  Train.py  TrainTopicModeling.py
TopicModeling/modelo/: meu_lda_model  meu_lda_model.id2word  meu_lda_model.state
__tests__/: test_geoparsing.py  test_topic_modeling.py
dados/: textos_limpos.csv  textos_videos.csv
docs/: CONTRIBUTING-pt_br.md  CONTRIBUTING.md  index.md  start.md
docs/geoparsing/: introdution.md
docs/topic_modeling/: introdution.md
pyelit/: __init__.py
pyelit/Geoparsing/: Geoparsing.py  __init__.py  preprocessing_gazetteer.py
pyelit/Geoparsing/exceptions/: GeoparsingException.py
pyelit/Geoparsing/gazetteer/: features_campina.csv  features_campina_ln.csv  features_campina_pt.csv
pyelit/Geoparsing/utils/: utils.py
pyelit/Pre_processamento/: pre_processamento.py
pyelit/TopicModeling/: TopicModeling.py  Train.py  __init__.py
pyelit/TopicModeling/modelo/: meu_lda_model.expElogbeta.npy
