[tool.poetry]
name = "pyelit"
version = "0.1.2"
description = "Extraction of Locations and Issues of a Text"
authors = ["Rich <richelton14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gensim = "3.8.0"
geocoder = "1.38.1"
spacy = "2.1.8"
nltk = "3.4.5"
pandas = "0.25.1"
googletrans = "^3.0.0"
truecase = "^0.0.12"
plpygis = "^0.2.0"
pyLDAvis = "^2.1.2"
google_trans_new = "^1.1.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
